[tool.poetry]
name = "saldet"
version = "0.1.0"
description = "Saliency Detection library (models, loss, utils) with PyTorch"
authors = ["Riccardo Musmeci"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
