[tool.poetry]
name = "saldet"
version = "0.1.0"
description = "Saliency Detection library (models, loss, utils) with PyTorch"
authors = ["Riccardo Musmeci"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
torch = "^1.13.1"
tqdm = "^4.65.0"
pyyaml = "^6.0"
timm = "^0.5.4"
albumentations = "^1.1.0"
pytorch-lightning = "^1.8.5"
lightning-bolts = "^0.5.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
