[tool.poetry]
name = "saldet"
version = "0.5.0"
description = "Saliency Detection library (models, loss, utils) with PyTorch"
authors = ["Riccardo Musmeci"]
repository = "https://github.com/riccardomusmeci/saldet"
license = "MIT"
readme = "README.md"
keywords = ["computer vision", "saliency detection"]

[tool.poetry.dependencies]
python = "^3.8"
torch = "^2.0.1"
tqdm = "^4.65.0"
pyyaml = "^6.0"
timm = "^0.6.13"
albumentations = "^1.3.0"
pytorch-lightning = "^2.0.0"
torchvision = "^0.15.2"
lightning-bolts = "^0.5.0"
matplotlib= "^3.7.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
tox = "^4.5.1"
scriv = "^1.3.1"
urllib3 = "^1.26.15"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.1"
scriv = {extras = ["toml"], version = "^1.3.1"}

[tool.scriv]
format = "md"
version = "literal: saldet/__init__.py: __version__"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
